# LawClaw

./: .env.example  .gitignore  README.md  constitution.md  ecosystem.config.js  judicial.md  pyproject.toml  skills.md
claude-max-api-proxy/: package-lock.json  package.json
claude-max-api-proxy/src/adapter/: cli-to-openai.ts  openai-to-cli.ts
claude-max-api-proxy/src/server/: routes.ts
claude-max-api-proxy/src/subprocess/: manager.ts
claude-max-api-proxy/src/types/: openai.ts
lawclaw/: __init__.py  config.py  db.py  main.py  telegram.py
lawclaw/core/: agent.py  cron.py  judicial.py  legislative.py  llm.py  subagent.py  tools.py
lawclaw/tools/: blender.py  chrome_cdp.py  exec_cmd.py  file_ops.py  manage_cron.py  manage_memory.py  send_file.py  spawn_subagent.py  web_fetch.py  web_search.py
laws/: conduct.md  privacy.md  safety.md
plans/260221-bootstrap-lawclaw/: plan.md
skills/: blender.md  chrome.md  cron-jobs.md  eas-build.md  git.md  memory-management.md  weather.md  web-search.md
