[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawclaw"
version = "0.1.0"
description = "The Governed AI Agent Framework — AI with Rule of Law"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "loguru>=0.7",
    "websockets>=12.0",
]

[project.scripts]
lawclaw = "lawclaw.main:cli"

[tool.setuptools.packages.find]
include = ["lawclaw*"]
